--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
     <p>
         Форум создан для обсуждение сценариев вывода России из политического, экономического и культурного тупика.
         Если вы хотите принять участие в обсуждение, приглашаем вас по ссылке, указанной в предыдущем параграфе.
-        Но перед этим советуем прочитать <a href="/rules.html">правила</a>.
+        Но перед этим советуем прочитать <a href="/rules/">правила</a>.
     </p>
 
     <h2 class="page-heading">Новости</h2>
