--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
 
     <h1>Добро пожаловать, свободные граждане!</h1>
 
-    <p>Этот сайт содержит описание, правила и прочую информаци посвященную Форуму Свободной России.
+    <p>Этот сайт содержит описание, правила и прочую информацию посвященную Форуму Свободной России.
         В данный момент форум доступен по адресу ...
     </p>
 
