--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,8 @@ layout: default
     <h1>Добро пожаловать, свободные граждане!</h1>
 
     <p>Этот сайт содержит описание, правила и прочую информацию посвященную Форуму Свободной России.
-        В данный момент форум доступен по адресу ...
+        В данный момент форум доступен по адресу 
+        <a href="https://forumfreeru.icyboards.net/" target="_blank">https://forumfreeru.icyboards.net/</a>
     </p>
 
     <h2>Цель форума</h2>
