--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,6 +18,17 @@ layout: default
         Но перед этим советуем прочитать <a href="/rules/">правила</a>.
     </p>
 
+    <p>
+        Все новые пользователи форума могут создавать темы и оставлять комментарии в режиме премодерации. Их посты будут 
+        просмотрены модераторами разделов прежче чем их увидят остальные форумчане. Со временем, по мере появления у 
+        пользователя истории сообщений, пользователь может быть переведен в группу доверенных пользователей. Это даст ему 
+        право писать на форуме без премодерации. Также он получит право создавать опросы и участвовать в опросах других 
+        форумчан.
+    </p>
+    <p>
+        На <a href="/admins/">этой</a> странице вы можете узнать кто и как управляет работой форума.
+    </p>
+
     <h2 class="page-heading">Новости</h2>
 
     {{ content }}
