--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,6 +18,7 @@ layout: default
         Но перед этим советуем прочитать <a href="/rules/">правила</a>.
     </p>
 
+    <h2>Принципы работы форума</h2>
     <p>
         Все новые пользователи форума могут создавать темы и оставлять комментарии в режиме премодерации. Их посты будут 
         просмотрены модераторами разделов прежче чем их увидят остальные форумчане. Со временем, по мере появления у 
